fix login modal spacing

--- a/app/assets/stylesheets/cities/stylesheet.css.less
+++ b/app/assets/stylesheets/cities/stylesheet.css.less
@@ -1439,6 +1439,7 @@ form.new_user {
   form.new_user {
     overflow: auto;
     -webkit-font-smoothing: antialiased !important;
+    padding: 1em;
     input, select {
       .fsI;
       padding: 5px 10px;
